# ros-semantic-segmentation

semantic_segmentation/: CMakeLists.txt  package.xml
semantic_segmentation/msg/: Object.msg  RoiArray.msg
semantic_segmentation/nodes/: classification_node  image_preprocessor  object_visualizer  roi_visualizer  segm_to_roi  segmentation_node  segmentation_visualizer
semantic_segmentation/nodes/models/: pb_semantic.py
semantic_segmentation/nodes/models/classifier/: Untitled.ipynb  __init__.py
semantic_segmentation/nodes/models/unetmct/: __init__.py  categories.json  frozen_model_ct_unetmct.pb
